Basic Layout Setup

--- a/index.html
+++ b/index.html
@@ -14,9 +14,87 @@
 
         <div class="primary-container">
 
-            <div class="sidebar"></div>
-            <div class="header"></div>
-            <div class="mainContent"></div>
+            <div class="sidebar">
+
+                <div class="sectionA">
+                    Dashboard
+                </div>
+
+                <div class="sectionB">
+                    
+                    <div>Home</div>
+                    <div>Profile</div>
+                    <div>Messages</div>
+                    <div>History</div>
+                    <div>Tasks</div>
+                    <div>Communities</div>
+
+                </div>
+
+                <div class="sectionC">
+                    
+                    <div>Settings</div>
+                    <div>Support</div>
+                    <div>Privacy</div>
+
+                </div>
+
+            </div>
+
+            <div class="header">
+
+                <div class="sectionA">
+
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+
+                </div>
+
+                <div class="sectionB">
+
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+
+                </div>
+
+            </div>
+
+            <div class="mainContent">
+
+                <div class="sectionA">
+
+                    <div class="projects">
+
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+
+                    </div>
+
+                </div>
+
+                <div class="sectionB">
+
+                    <div class="announcements">
+
+                    </div>
+
+                    <div class="trending">
+
+                    </div>
+
+                </div>
+
+            </div>
 
         </div>
 
